Enable scheduled comprehensive attacks in HexStrike
Added a scheduled event handler and cron trigger to hexstrike-worker.js and wrangler-hexstrike.toml to execute comprehensive security attacks every 20 minutes. Expanded attack payloads to cover 10 attack types and 86 variants, and added a new manual endpoint (/attack/comprehensive) and dashboard button for on-demand full attack runs. Documentation files DEPLOYMENT_SUCCESS.md and SCHEDULED_ATTACK_ENABLED.md were added to describe deployment status and scheduled attack functionality.

--- a/infrastructure/cloud-configs/cloudflare/wrangler-ai.toml
+++ b/infrastructure/cloud-configs/cloudflare/wrangler-ai.toml
@@ -8,6 +8,10 @@ compatibility_flags = ["nodejs_compat"]
 workers_dev = true
 # route = "unified-ai-quantum.dennisleehappy.org/*"
 
+# Cron Triggers - 每 24 小時訓練一次 (UTC 00:00)
+[triggers]
+crons = ["0 0 * * *"]
+
 # D1 資料庫 binding
 # 部署前需要先創建 D1 資料庫
 # wrangler d1 create security-platform-db
