--- a/infrastructure/cloud-configs/cloudflare/wrangler-hexstrike.toml
+++ b/infrastructure/cloud-configs/cloudflare/wrangler-hexstrike.toml
@@ -35,6 +35,11 @@ enabled = true
 # Workers 配置
 workers_dev = true
 
+# Cron Triggers - 定時自動攻擊
+# 每 20 分鐘執行一次全面攻擊
+[triggers]
+crons = ["*/20 * * * *"]
+
 # 自定義域名配置（需要手動在 Cloudflare Dashboard 設定）
 # 或使用 route 替代
 # routes = [
